# object_detection_pkg

./: detection_report_agent.py  package.xml  setup.py
launch/: detection_launch.py
object_detection_pkg/: help.py  object_detection_node.py  rosbot_camera_subscriber.py
