<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nahianprf121@gmail.com">nahian</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>shutil</exec_depend>
  <exec_depend>datetime</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
